# livescore-tv

./: .gitignore  LICENSE  README.md  homepage.html  match_page.html  pyproject.toml  test_loading.py  test_score808.py
.github/workflows/: build-all.yml
src/: main.py
src/assets/: outfit.css
src/components/: channel_card.py  ktv_dialog.py  loading_state.py  match_card.py
src/core/: config.py  constants.py  controller.py  errors.py  focus_manager.py  state.py  theme.py
src/services/: cache.py  livescore.py  score808.py
src/views/: home.py  match_detail.py  player.py  search.py  splash.py
tests/: test_cache.py  test_controller.py  test_livescore.py  test_scraper.py
