[project]
name = "livescore-tv"
version = "1.0.0"
description = "Lightweight client-side Android TV / mobile / desktop app for watching live football matches."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.12.0",
    "flet==0.85.0",
    "flet-video==0.85.0",
    "httpx>=0.28.1",
    "lxml>=5.0.0",
]

[tool.flet]
org = "com.livescore"
product = "Livescore TV"
build_number = 1

[tool.flet.app]
path = "src"

[tool.flet.android]
bundle_id = "com.livescore.tv"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.WAKE_LOCK" = true

[tool.flet.android.feature]
"android.software.leanback" = true
"android.hardware.touchscreen" = false

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
